--- a/angular.json
+++ b/angular.json
@@ -25,6 +25,8 @@
             ],
             "styles": [
               "src/styles.css",
+              "node_modules/popper.js/dist/umd/popper.min.js",
+              "node_modules/bootstrap/dist/js/bootstrap.min.js",
               "node_modules/bootstrap/dist/css/bootstrap.css"
             ],
             "scripts": []
