--- a/package.json
+++ b/package.json
@@ -23,8 +23,10 @@
     "@angular/platform-browser-dynamic": "~8.2.13",
     "@angular/router": "~8.2.13",
     "bootstrap": "^4.4.1",
+    "chart.js": "^2.9.3",
     "express": "^4.17.1",
     "jquery": "^3.4.1",
+    "ng2-charts": "^2.3.0",
     "ngx-bootstrap": "^5.2.0",
     "path": "^0.12.7",
     "popper.js": "^1.16.0",
@@ -34,7 +36,7 @@
     "zone.js": "~0.9.1"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^0.803.22",
+    "@angular-devkit/build-angular": "^0.803.23",
     "@angular/cli": "^8.3.22",
     "@angular/compiler-cli": "^8.2.14",
     "@angular/language-service": "~8.2.13",
