--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "ng2-charts": "^2.3.0",
     "ngx-bootstrap": "^5.2.0",
     "path": "^0.12.7",
+    "pdfmake": "^0.1.63",
     "popper.js": "^1.16.0",
     "rxjs": "~6.4.0",
     "tslib": "^1.10.0",
