add download PDF function

--- a/package.json
+++ b/package.json
@@ -24,11 +24,18 @@
     "@angular/router": "~8.2.13",
     "bootstrap": "^4.4.1",
     "chart.js": "^2.9.3",
+    "cors": "^2.8.5",
     "express": "^4.17.1",
+    "formidable": "^1.2.1",
+    "html2canvas": "^1.0.0-rc.5",
+    "html2canvas-proxy": "^1.0.1",
     "jquery": "^3.4.1",
+    "jspdf": "^1.5.3",
+    "ng-pdf-make": "^0.1.1",
     "ng2-charts": "^2.3.0",
     "ngx-bootstrap": "^5.2.0",
     "path": "^0.12.7",
+    "pdf": "^0.1.0",
     "pdfmake": "^0.1.63",
     "popper.js": "^1.16.0",
     "rxjs": "~6.4.0",
