test mongo db api endpoints

--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@angular/platform-browser": "~8.2.13",
     "@angular/platform-browser-dynamic": "~8.2.13",
     "@angular/router": "~8.2.13",
+    "body-parser": "^1.19.0",
     "bootstrap": "^4.4.1",
     "chart.js": "^2.9.3",
     "cors": "^2.8.5",
@@ -31,6 +32,7 @@
     "html2canvas-proxy": "^1.0.1",
     "jquery": "^3.4.1",
     "jspdf": "^1.5.3",
+    "mongodb": "^3.5.2",
     "ng-pdf-make": "^0.1.1",
     "ng2-charts": "^2.3.0",
     "ngx-bootstrap": "^5.2.0",
